experiment_output/error_log/nondex-kiptubei-ThunesCalculator.log
/mnt/batch/tasks/workitems/NONDEX_nondex_r131_1M31d16h48m2s/job-1/Task1138/wd/NonDex-plugin-test/github.com/kiptubei/ThunesCalculator/src/main/java/com/kiptubei/Result.java:3: error: package javax.xml.bind.annotation does not exist
import javax.xml.bind.annotation.XmlRootElement;
                                ^
/mnt/batch/tasks/workitems/NONDEX_nondex_r131_1M31d16h48m2s/job-1/Task1138/wd/NonDex-plugin-test/github.com/kiptubei/ThunesCalculator/src/main/java/com/kiptubei/Result.java:5: error: cannot find symbol
@XmlRootElement(name="result")
 ^
  symbol: class XmlRootElement
2 errors

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':compileJava'.
> Compilation failed; see the compiler error output for details.

* Try:
Run with --stacktrace option to get the stack trace. Run with --info or --debug option to get more log output. Run with --scan to get full insights.

* Get more help at https://help.gradle.org

BUILD FAILED in 6s
